# drive-profile-backup

./: .coverage  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
docs/: profile-summary-2026-04-13.md  profile-summary-v2.md  profile-summary.md
scripts/: generate_summary.py
src/drive_backup/: __init__.py  cli.py  config.py  dedup.py  drive_api.py  engine.py  report.py  scanner.py  utils.py
tests/: test_cli.py  test_config.py  test_dedup.py  test_drive_api.py  test_engine.py  test_report.py  test_scanner.py
